--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Love Letter</title>
-  <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'><link rel="stylesheet" href="./style.css">
+  <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://bgwhizz12.github.io/Thanksgiving/style.css">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 </div>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js'></script><script  src="https://bgwhizz12.github.io/Thanksgiving/script.js"></script>
 
 </body>
 </html>
